--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 * {
-    background-color: #3b3a39; 
+    background-color: #3b3a39;
     color: #9c9e9b;
+    text-rendering: optimizeLegibility;
 }
