--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,104 +1,61 @@
 html {
-    height: 100vh;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     overflow: hidden;
-}
-
-body {
-    min-height: 100vh;
+    padding: 0;
     margin: 0;
-    background: #182238;
-    background-size: cover;
-    color: white;
-    font-weight: 0;
+    background-color: #17212B;
 }
 
-#page {
+.chatsPage {
+    background-color: #17212B;
+    height: 100%;
+}
+
+#chatParent {
+    padding: 0;
+    padding-top: 10px;
+}
+
+.chat {
+    background-color: #0E1621;
     position: relative;
-}
-
-#chat {
-    max-width: 50vw;
-    background-color: #1C0335;
+    height: 100%;
+    width: 100%;
 }
 
 .header {
     position: relative;
-    width: 50vw;
     top: 0;
-    left: 50%; transform: translate(-50%);
-    height: 75px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #1C0335;
-    padding-left: 10px;
+    background-color: #17212B;
+    width: 100%;
+    height: 60px;
+    border-left-style: solid;
+    border-left-width: 1.2px;
+    border-left-color: #101921;
+    border-right-style: solid;
+    border-right-width: 1.2px;
+    border-right-color: #101921;
 }
 
 .middle {
-    position: relative;
-    padding: 20px;
-    width: 50vw;
-    top: 0px;
-    height: 80vh;
-    margin-bottom: auto;
-    left: 50%; transform: translate(-50%);
-    flex-direction: column;
-    display: flex;
-    background-color: #240445;
-    word-wrap: break-word;
+    top: 60px;
+    bottom: 60px;
+    width: 100% ;
     overflow-y: scroll;
+    height: 83vh;
 }
 
 .bottom {
     position: relative;
-    width: 50vw;
     bottom: 0px;
-    left: 50%; transform: translate(-50%);
-    height: 75px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #1C0335;
-    justify-content: center;
-}
-
-
-#chatsButton {
-    position: relative;
-    background-color: transparent;
-    border-style: none;
-    border-width: 0.3px;
-    border-radius: 2px;
-    left: 20px;
-    width: 55px;
-    background-color: #420B65;
-    height: 45px;
-    background-image: url("../pics/icons8-back-100 (2).png");
-    background-size: 50px 45px;
-    background-repeat: no-repeat;
-    background-position: center;
-
-}
-
-#chatContact {
-    position: relative;
-    top: 1px;
-    left: 100px;
-    padding-left: 10px;
-    padding-bottom: 35px;
-    font-size: 40px;
-    color: #e6e6e6;
-    font-family: fantasy;
-}
-
-.messageForm {
-    display: flex;
-    flex-direction: row;
-    width:575px;
+    height: 70px;
+    width: 100%;
+    background-color: #17212B;
+    border-left-style: solid;
+    border-left-width: 1.2px;
+    border-left-color: #101921;
+    border-right-style: solid;
+    border-right-width: 1.2px;
+    border-right-color: #101921;
 }
 
 #messages {
@@ -106,48 +63,80 @@ body {
 
 .message {
     overflow: hidden;
-    display: inline-grid;
-    border-style: none;
-    max-width: 80%;
-    border-width: 0.5px;
-    border-radius: 5px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 0px;
-    font-family: sans-serif;
+    display: inline-block;
+    margin-bottom: 2px;
+    clear: both;    border-style: none;
     font-size: 14px;
     padding-top: 3px;
-    padding-left: 18px;
-    padding-right: 18px;
-    background-color: #660ac2;
+    padding-bottom: 3px;
     clear:both;
     float:left;
+    min-width: 80px;
+    max-width: 40vw;
+    padding-left: 7px;
+    padding-right: 7px;
+
 }
 
-#messageSendButton {
-    height: 50px;
-    width: 100px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-style: none;
-    border-left-style: solid;
-    background-color: #240445;
-    color: white;
-    border-color: blue;
+.sent {
+    background-color: #2A5378;
+    color: #E5EDE8;
+    float: right;
+    margin-right: 10px;
+}
+
+.sentMessageTime {
+    color: #7DA8D3;
+    float: right;
+}
+
+.recievedMessageTime {
+    float: left;
+    color: #6D7F8F;
+}
+
+.recieved {
+    background-color: #182533;
+    color: #E5F5F5;
+    float:left;
     margin-left: 10px;
 }
 
-#messageInput {
-    width: 500/575%;
-    height: 50px;
-    border-color: transparent;
+.messageForm {
+    background-color: #17212B;
+    padding-top: 13px;
+    display: inline-block;
+}
+
+#messageInput  {
+    margin-left: 100px;
+    width: 450px;
+
+    height: 40px;
+    border-color: #7DA8D3;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    background-color: #240445;
+    background-color: #17212B;
     color: white;
 }
 
-#addToTexts {
-    background-color: blue;
+#messageSendButton {
+    margin-top: 7px;
+    margin-left: 10px;
+    background-image: url('../pics/pngkit_send-icon-png_1882365.png');
+    background-size: cover;
+    background-color: #17212B;
+    border-color: #17212B;
+    border-style: none;
+    color: #5289C1;
+    height: 30px;
+    width: 30px;
+    background-repeat: no-repeat;
+    background-size: 90%;
+}
+
+.emojis {
+    background-color: #17212B;
+    height: 100%;
+    width: 100%;
 }
